# isola_api_cpp

./: README.md
isola/: CMakeLists.txt  isola.cpp
isola/controller/: CMakeLists.txt  board.h  gamecontroller.cpp  gamecontroller.h
isola/model/: CMakeLists.txt  board.cpp  board.h
isola/view/: CMakeLists.txt  gameview.cpp  gameview.h
